--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,21 @@
+.main-container {
+    display: flex;
+    flex-direction: column;    
+    margin: 20px 30px;
+}
+
+.title-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+.select-brand-container {
+    width: 300px;
+}
+
 
 .dropdown-container {
     width: 200px;    
