--- a/assets/styles.css
+++ b/assets/styles.css
@@ -72,3 +72,22 @@
     padding: 5px;
     cursor: pointer;
 }
+
+.update-data-btn-container {
+    margin-top: 10px;
+}
+
+.update-data-btn {
+    width: 100px;
+    border : 1px solid green;
+    color: green;
+    background-color: white;
+    border-radius: 10px;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.update-data-btn:hover {    
+    color: white;
+    background-color: green;    
+}
